# frontend-engineer-challenge

./: README.md
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml  openapi.yaml
backend/.sqlx/: query-0d44cb8d34ec047bb49bb26cfd3d09085f89084055ccc9c2b62f06e02f82596c.json  query-18335b2c7d17222edbc2fc7fe0f9ba365857a5b1d0d90c3e2aa94184327471f5.json  query-1bd30cf4aabadf39117f797b51196b1793961dc84bc4f22a39fa0794a252d3a2.json  query-2f5963a88263fba51a402e74d73ddbbe972952a7f16de90ca107621496af3613.json  query-87fd59d6e396145af6df6c6d922dde3f45d553a5a06df7d28eaf37a6a2e28795.json  query-a9eb36da13a0e701f8e4ab58c3e070e1642829f7251dd67ad01f9722e0fd7a21.json  query-b06c2e87196a3717fbdb07de676e160b46a7c7e25fccf43279a5081ef3050974.json
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/application/src/command/auth/: mod.rs  register.rs  register_test.rs  request_password_reset.rs  request_password_reset_test.rs  reset_password.rs  reset_password_test.rs
backend/crates/application/src/dto/requests/auth/: login_user.rs  mod.rs  register_user.rs  request_password_reset.rs  reset_password.rs
backend/crates/application/src/ports/: hasher.rs  mailer.rs  mod.rs
backend/crates/application/src/query/auth/: login.rs  login_test.rs  mod.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/shared/repository/: error.rs
backend/crates/domain/src/shared/value_objects/: password_hash.rs
backend/crates/domain/src/user/: entity.rs  mod.rs  repository.rs
backend/crates/domain/src/user/value_objects/: email.rs  id.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: lib.rs
backend/crates/infrastructure/src/config/: mailer.rs  mod.rs  postgres.rs
backend/crates/infrastructure/src/database/postgres/: connection.rs  error.rs  mod.rs
backend/crates/infrastructure/src/database/postgres/dto/: user.rs
backend/crates/infrastructure/src/database/postgres/repositories/: user.rs
backend/crates/infrastructure/src/hasher/: bcrypt.rs
backend/crates/infrastructure/src/mailer/: smtp_mailer.rs
backend/crates/presentation/api/: Cargo.toml
backend/crates/presentation/api/src/: config.rs  lib.rs  main.rs  openapi.rs  server.rs
backend/crates/presentation/api/src/handlers/: auth.rs
backend/crates/presentation/api/src/routes/: auth.rs  mod.rs
backend/crates/presentation/api/src/shared/: error.rs  mod.rs  state.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: lib.rs
backend/crates/shared/src/jwt/: claims.rs  validation.rs
backend/crates/shared/src/rate_limiting/: config.rs  mod.rs
backend/docker/api/: Dockerfile
backend/migrations/: 20260327170345_create_users_table.up.sql  20260327170355_create_password_reset_tokens_table.down.sql  20260327170355_create_password_reset_tokens_table.up.sql
(+11 files in other folders)
