[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation/api",
    "crates/shared"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
envy = "0.4.2"
dotenv = "0.15.0"
futures = "0.3.32"
env_logger = "0.11.9"
mockall = "0.14"
tokio = { version = "1.50", features = ["full"] }

domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
shared = { path = "crates/shared" }
